[package]
name = "lltz"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
lalrpop = "0.20.0"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.2.7", features = ["derive"] }
lalrpop-util = { version = "0.20.0", features = ["lexer", "unicode"] }
michelson-ast = { path = "./michelson-ast" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
