[package]
name = "michelson-ast"
version = "0.1.1"
edition = "2021"
homepage = "https://github.com/woxjro/michelson-ast"
repository = "https://github.com/woxjro/michelson-ast"
license = "MIT"
description = "An AST for Michelson, a Tezos smart contract language"
keywords = ["ast", "tezos", "michelson","blockchain"]
readme = "README.md"

[dependencies]
